--- a/app/src/main/res/layout/repo_view_item.xml
+++ b/app/src/main/res/layout/repo_view_item.xml
@@ -1,106 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2018 The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="@dimen/row_item_margin_horizontal"
-    android:paddingTop="@dimen/row_item_margin_vertical"
+    android:layout_margin="16dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="8dp"
+    app:strokeColor="#234433"
+    app:strokeWidth="2dp"
     tools:ignore="UnusedAttribute">
 
-    <TextView
-        android:id="@+id/repo_name"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/titleColor"
-        android:textSize="@dimen/repo_name_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="android-architecture"/>
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/repo_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:maxLines="10"
-        android:paddingVertical="@dimen/row_item_margin_vertical"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/repo_description_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_name"
-        tools:ignore="UnusedAttribute"
-        tools:text="A collection of samples to discuss and showcase different architectural tools and patterns for Android apps."/>
+        <TextView
+            android:id="@+id/repo_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/titleColor"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="android-architecture" />
 
-    <TextView
-        android:id="@+id/repo_language"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:paddingVertical="@dimen/row_item_margin_vertical"
-        android:text="@string/language"
-        android:textSize="@dimen/repo_description_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_description"
-        tools:ignore="RtlCompat"/>
+        <TextView
+            android:id="@+id/repo_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="10"
+            android:paddingVertical="8dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repo_name"
+            tools:text="A collection of samples to discuss and showcase different architectural tools and patterns for Android apps." />
 
-    <ImageView
-        android:id="@+id/star"
-        android:layout_width="0dp"
-        android:layout_marginVertical="@dimen/row_item_margin_vertical"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_star"
-        app:layout_constraintEnd_toStartOf="@+id/repo_stars"
-        app:layout_constraintBottom_toBottomOf="@+id/repo_stars"
-        app:layout_constraintTop_toTopOf="@+id/repo_stars"
-    />
+        <TextView
+            android:id="@+id/repo_language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="8dp"
+            android:text="@string/language"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repo_description"
+            tools:ignore="RtlCompat" />
 
-    <TextView
-        android:id="@+id/repo_stars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/row_item_margin_vertical"
-        android:textSize="@dimen/repo_description_size"
-        app:layout_constraintEnd_toStartOf="@id/forks"
-        app:layout_constraintBaseline_toBaselineOf="@+id/repo_forks"
-        tools:text="30"/>
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:src="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="@+id/repo_stars"
+            app:layout_constraintEnd_toStartOf="@+id/repo_stars"
+            app:layout_constraintTop_toTopOf="@+id/repo_stars" />
 
-    <ImageView
-        android:id="@+id/forks"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/row_item_margin_vertical"
-        android:src="@drawable/ic_git_branch"
-        app:layout_constraintEnd_toStartOf="@+id/repo_forks"
-        app:layout_constraintBottom_toBottomOf="@+id/repo_forks"
-        app:layout_constraintTop_toTopOf="@+id/repo_forks"
-    />
+        <TextView
+            android:id="@+id/repo_stars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="8dp"
+            android:textSize="16sp"
+            android:textColor="#234433"
+            app:layout_constraintBaseline_toBaselineOf="@+id/repo_forks"
+            app:layout_constraintEnd_toStartOf="@id/forks"
+            tools:text="30" />
 
-    <TextView
-        android:id="@+id/repo_forks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/row_item_margin_vertical"
-        android:textSize="@dimen/repo_description_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_description"
-        tools:text="30"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/forks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:src="@drawable/ic_git_branch"
+            app:layout_constraintBottom_toBottomOf="@+id/repo_forks"
+            app:layout_constraintEnd_toStartOf="@+id/repo_forks"
+            app:layout_constraintTop_toTopOf="@+id/repo_forks" />
+
+        <TextView
+            android:id="@+id/repo_forks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="8dp"
+            android:textSize="16sp"
+            android:textColor="#234433"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/repo_description"
+            tools:text="30" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
