--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,6 @@
     <color name="titleColor">#1F75FE</color>
     <color name="titleColorAlpha">#551F75FE</color>
     <color name="greyAlpha">#55999999</color>
-    <color name="separatorBackground">#AAAAAA</color>
+    <color name="separatorBackground">#5A8A33</color>
     <color name="separatorText">#FFFFFF</color>
 </resources>
